# cornchan

./: Cargo.toml  docker-compose.yml
public/: index.css
src/: db.rs  error.rs  general_helpers.rs  main.rs  traits.rs
src/data_types/: boards.rs  mod.rs  thread.rs
src/routes/: handlers.rs  middlewares.rs  mod.rs
views/: board.tera.html  index.tera.html  macros.tera.html  new_thread.tera.html  rules.tera.html  thread.tera.html
