[package]
name = "chan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["tracing", "multipart"] }
axum_typed_multipart = "0.10.0"
image = { version = "0.24.7", features = ["webp", "webp-encoder"] }
nanoid = "0.4.0"
redis = { version = "0.23.3", features = ["tokio-rustls-comp"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sha3 = "0.10.8"
tempfile = "3.8.0"
tera = "1.19.1"
tokio = { version = "1.33.0", features = ["rt", "macros", "rt-multi-thread"] }
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
# uuid = { version = "1.4.1", features = ["v4", "serde"] }
